<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6DFE1"
    tools:context=".MaskActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textSize="30sp"
            android:textColor="#B76E79"
            android:textAllCaps="true"
            android:padding="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#EFD1D5"
            android:radius="15dp"
            android:padding="4dp"
            android:elevation="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/body"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="190dp"
                android:layout_height="196dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="-30dp"
                app:srcCompat="@drawable/corps" />
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expand_all"
                android:background="#00000000"
                android:padding="20dp"
                android:textColor="@color/black"
                app:elevation="10dp"
                android:onClick="onClick"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#EFD1D5"
            android:radius="15dp"
            android:layout_marginTop="20dp"
            android:elevation="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/face"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:padding="40dp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="119dp"
                android:layout_height="222dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="0dp"
                app:srcCompat="@drawable/face" />
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expand_all"
                android:background="#00000000"
                android:padding="20dp"
                android:textColor="@color/black"
                app:elevation="10dp"
                android:onClick="onClick"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#EFD1D5"
            android:radius="15dp"
            android:layout_marginTop="20dp"
            android:elevation="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hair"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:padding="25dp"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="188dp"
                android:layout_height="216dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="-1dp"
                app:srcCompat="@drawable/hair" />
            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expand_all"
                android:background="#00000000"
                android:padding="20dp"
                android:textColor="@color/black"
                app:elevation="10dp"
                android:onClick="onClick"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#EFD1D5"
            android:radius="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hand"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:padding="25dp"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="172dp"
                android:layout_height="221dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="0dp"
                app:srcCompat="@drawable/hand" />
            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expand_all"
                android:background="#00000000"
                android:padding="20dp"
                android:textColor="@color/black"
                app:elevation="10dp"
                android:onClick="onClick"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </LinearLayout>



</ScrollView>