<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6DFE1"
    tools:context=".BodyMaskActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:textSize="30sp"
            android:textAllCaps="true"
            android:layout_marginHorizontal="70dp"
            android:padding="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#F6DFE1"
            android:radius="15dp"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moisturisingbody"
                android:textColor="#BC7973"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="1- 6 T bentonite clay"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="2- 3 or more T herbal tea (infused in water)"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="125dp"
                android:text="3- 5-7 drops Moonlit Skincare Midnight shift serum"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="190dp"
                android:layout_height="206dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="0dp"
                android:layout_marginRight="-80dp"
                app:srcCompat="@drawable/bentonite" />

        </RelativeLayout>
        <View
            android:id="@+id/SplitLine_hor1"
            android:layout_width="match_parent"
            android:layout_height= "2dp"
            android:background="@color/black"
            android:elevation="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#F6DFE1"
            android:radius="15dp"
            android:padding="4dp">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-150dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/organicturmeric" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/growingskin"
                android:textColor="#BC7973"
                android:layout_marginBottom="50dp"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="1- 1 cup Sugar"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="200dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="2- 2 tsp Turmeric Powder"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="200dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:text="3- ½ cup Coconut Oil"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="200dp"
                android:textColor="@color/black"/>
        </RelativeLayout>
        <View
            android:id="@+id/SplitLine_hor2"
            android:layout_width="match_parent"
            android:layout_height= "2dp"
            android:background="@color/black"
            android:elevation="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#F6DFE1"
            android:radius="15dp"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/lemonscrub"
                android:textColor="#BC7973"
                android:textSize="28sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="1- 2 tbsp Sugar"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="2- 1 tbsp Honey"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="3- 1 Whole Lemon"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="190dp"
                android:layout_height="206dp"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/lemon" />
        </RelativeLayout>


    </LinearLayout>

</ScrollView>