<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE5D9"
    tools:context=".FaceMaskActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facemaks"
            android:textSize="30sp"
            android:textAllCaps="true"
            android:layout_marginHorizontal="70dp"
            android:padding="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#FFE5D9"
            android:radius="15dp"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/coffeescrub"
                android:textColor="#BC7973"
                android:textSize="30sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="1- 1/2 cup fresh ground coffee"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="2- 1/2 cup brown sugar"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="115dp"
                android:text="3- 1/2 cup melted coconut oil"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="190dp"
                android:layout_height="206dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="0dp"
                app:srcCompat="@drawable/coffee" />

        </RelativeLayout>
        <View
            android:id="@+id/SplitLine_hor1"
            android:layout_width="match_parent"
            android:layout_height= "2dp"
            android:background="@color/black"
            android:elevation="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#FFE5D9"
            android:radius="15dp"
            android:padding="4dp">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-200dp"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/banana" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bananamask"
                android:textColor="#BC7973"
                android:layout_marginBottom="50dp"
                android:layout_marginHorizontal="200dp"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="1- 1 mashed banana"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="200dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="2- 1/2 teaspoon baking soda"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="200dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:text="3- 1/2 teaspoon turmeric powder"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="200dp"
                android:textColor="@color/black"/>
        </RelativeLayout>
        <View
            android:id="@+id/SplitLine_hor2"
            android:layout_width="match_parent"
            android:layout_height= "2dp"
            android:background="@color/black"
            android:elevation="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#FFE5D9"
            android:radius="15dp"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/avocadomask"
                android:textColor="#BC7973"
                android:textSize="28sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="1- 1 avocado"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="2- 2 tablespoons plain yogurt"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="3- 1 tablespoon olive oil"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:text="3- 1 tablespoon honey"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="190dp"
                android:layout_height="206dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="0dp"
                app:srcCompat="@drawable/avocado" />

        </RelativeLayout>
        <View
            android:id="@+id/SplitLine_hor3"
            android:layout_width="match_parent"
            android:layout_height= "2dp"
            android:background="@color/black"
            android:elevation="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#FFE5D9"
            android:radius="15dp"
            android:padding="4dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-50dp"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/cucumber" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cucumbermask"
                android:textColor="#BC7973"
                android:layout_marginBottom="50dp"
                android:layout_marginHorizontal="199dp"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:layout_marginTop="50dp"
                android:text="1- 1/2 cucumber"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="2- 1/4 cup milk"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="200dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="3- 1 tablespoon honey"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="200dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:text="3- 1 tablespoon brown sugar"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="200dp"
                android:textColor="@color/black"/>
        </RelativeLayout>
        <View
            android:id="@+id/SplitLine_hor4"
            android:layout_width="match_parent"
            android:layout_height= "2dp"
            android:background="@color/black"
            android:elevation="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="#FFE5D9"
            android:radius="15dp"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/lemonmask"
                android:textColor="#BC7973"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="1- Juice of 1 lemon"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="2- 2 tablespoons sugar"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="3- 1 tablespoon olive oil"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="190dp"
                android:layout_height="206dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="0dp"
                app:srcCompat="@drawable/lemon" />

        </RelativeLayout>


    </LinearLayout>


</ScrollView>